@@ -64,7 +64,7 @@ module RDoc
   ##
   # RDoc version you are using
 
-  VERSION = '4.1.0.preview.2'
+  VERSION = '4.1.0.preview.3'
 
   ##
   # Method visibilities
